# fast-quantiles

./: Cargo.toml  LICENSE  README.md
benches/: benchmark.rs
src/: gk.rs  lib.rs  mean.rs  quantile_generator.rs
src/btree/: mod.rs  node.rs  tree.rs  tree_iter.rs
src/gk/: mod.rs  sample.rs  summary.rs
src/modified_gk/: incoming_merge_state.rs  mod-old.rs  mod.rs  sample.rs  samples_compressor.rs  samples_tree.rs  summary.rs  summary_writer.rs
src/modified_gk/samples_tree/: iter.rs  mod.rs  node.rs  tree.rs
src/quantile_generator/: mod.rs  ordered_f64.rs  random.rs  sequential.rs
src/tests/: gk.rs  mod.rs  quantile_generator.rs  tests.rs
