[package]
name = "space_efficient_quantile"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
typenum = "1.11.2"
sized-chunks = "0.5.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true